--- a/CSS/style.css
+++ b/CSS/style.css
@@ -52,7 +52,7 @@ main{
     margin: 5px;
     border: 1px solid var(--cor1);
     background-color: rgba(94, 11, 94, 0.856);
-    border-radius: 0 15px 15px 15px;
+    border-radius: 3px 15px 15px 15px;
 }
 
 .op a{
@@ -81,10 +81,11 @@ i{
 
 .op a:hover .cjump{
     transform: rotateZ(90deg);
-    
+    animation: none;
 }
 .cjump{
     color: var(--cor1);
+    animation: jumping .8s ease-in-out infinite alternate;
 }
 
 /* Input */
@@ -92,4 +93,51 @@ i{
     display: flex;
     padding: 0px 15px;
     margin: 30px 0;
+}
+
+input{
+    margin-left: 15px;
+    border-radius: 5px;
+    border: none;
+    padding: 3px;
+    color: var(--cor2);
+    font-weight: bold;
+    background-color: aliceblue;
+}
+
+#saida{
+    margin-left: 34px;
+    background-color: aliceblue;
+    padding: 1px 0 1px 3px;
+    color: var(--cor2);
+    font-weight: bold;
+    min-width: 200px;;
+    border-radius: 5px;
+}
+
+.p-txt{
+    font-size: 1.2em;
+}
+
+/* Selected */
+.sec{
+    background-color: red;
+    box-shadow: none;
+    transform: scale(1.25);
+}
+
+.sec .cjump{
+    transform: rotateZ(90deg);
+}
+
+/*Animation */
+@keyframes jumping{
+    0%, 100% {
+        transform: translateY(2px);
+        
+    }
+    to{
+        
+        transform: translateY(-3px);
+    }
 }
